Sabrina/update to the latest swagger spec (#36)
